--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section>
-        <h2><a href="https://www.getdroidtips.com/patch-stock-boot-image-magisk/">Also Credit From: GetDroidTips Site<3</h2>
+        <h2>Also Credit From: GetDroidTips Site<3</h2>
     </section>
 
     <section>
