--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
+    <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Unlock the Power: A Step-by-Step Guide to Rooting Android Phones 📱</title>
+
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -94,18 +97,24 @@
         <p><strong>But before we get started, a quick heads-up:</strong> the video quality might not be Hollywood-worthy. Unfortunately, I don't have the latest and greatest camera equipment to dazzle you with 4K visuals. However, I'm here to share knowledge, and with your understanding, we can make the most of what we have.</p>
     </header>
 
-    <section>
-        <h2>Watch the Tutorial</h2>
-        <p>Scroll down to find the comprehensive, step-by-step tutorial in the video below. Rooting your Android opens up a world of possibilities, even if the video quality isn't top-notch. I'm working on improving that in the future.</p>
-        <!-- Replace with your video embed code -->
-        <a href="https://www.youtube.com/watch?v=oX1-aF6KTvo&si=ysMaRiNRFm3Hm0B9&fbclid=IwAR2zxuVOuclJMQw-g9w8YUd8jlKDNh-ncc5SeNaSaYFbbzkcceX314nFOME" target="_blank"><img src="new.jpg" alt="Link Image"></a>
-    </section>
+   <section>
+    <h2>Watch the Tutorial</h2>
+    <p>Scroll down to find the comprehensive, step-by-step tutorial in the video below. Rooting your Android opens up a world of possibilities, even if the video quality isn't top-notch. I'm working on improving that in the future.</p>
+    <!-- Replace with your video embed code -->
+    <a href="https://www.youtube.com/watch?v=oX1-aF6KTvo&si=ysMaRiNRFm3Hm0B9&fbclid=IwAR2zxuVOuclJMQw-g9w8YUd8jlKDNh-ncc5SeNaSaYFbbzkcceX314nFOME" target="_blank">
+        <img src="new.jpg" alt="Link Image" style="width: 100%; height: auto; max-width: 100%;">
+    </a>
+</section>
 
-    <section>
-        <h2>Additional Tutorial Video</h2>
-        <!-- Replace with your 2nd video embed code -->
-        <a href="https://www.youtube.com/watch?v=LLg2OUacUKU&t=110s" target="_blank"><img src="old.jpg" alt="Link Image"></a>
-    </section>
+<section>
+    <h2>Watch the Tutorial</h2>
+    <p>Scroll down to find the comprehensive, step-by-step tutorial in the video below. Rooting your Android opens up a world of possibilities, even if the video quality isn't top-notch. I'm working on improving that in the future.</p>
+    <!-- Replace with your video embed code -->
+    <a href="https://www.youtube.com/watch?v=LLg2OUacUKU&t=110s" target="_blank">
+        <img src="old.jpg" alt="Link Image" style="width: 100%; height: auto; max-width: 100%;">
+    </a>
+</section>
+
 
     <section>
         <h2>Also Credit From: GetDroidTips Site<3</h2>
@@ -133,36 +142,35 @@ Security Risks: An unlocked bootloader can potentially expose your device to sec
         <p>I'm using Infinix Note 30 5G Dimensity 6080, and for Infinix/Tecno Phones.</p>
     </section>
 
-    <section>
-        <h2>How to Unlock Bootloader on Infinix/Tecno Smartphone</h2>
-        First open platform-tools/Multi-Platform Tools
-            Then open command prompt in the folder
-        <pre>
-            <code id="fastbootCode">
-            adb reboot bootloader
-            fastboot flashing unlock then press volume up.
-            </code>
-        </pre>
-        <button class="copy-btn" onclick="copyToClipboard('fastbootCode')">Copy</button>
-        make sure you have OEM unlocking and USB debugging on and some drivers too.
-            and voila, your bootloader is unlocked
-    </section>
+  <section>
+    <h2>How to Unlock Bootloader on Infinix/Tecno Smartphone</h2>
+    First open platform-tools/Multi-Platform Tools
+    Then open command prompt in the folder
+    <pre>
+        <code id="fastbootCode">
+        adb reboot bootloader
+        fastboot flashing unlock then press volume up.
+        </code>
+    </pre>
+    make sure you have OEM unlocking and USB debugging on and some drivers too.
+    and voila, your bootloader is unlocked
+</section>
 
-    <section>
-        <h2>Steps to Root</h2>
+<section>
+    <h2>Steps to Root</h2>
 
-           Seems like you have unlocked the bootloader from the last step.
-            now get your Magisk patched boot.img and your vbmeta.img adn follow the commands below
-        <pre>
-            <code id="rootSteps">
-            fastboot --disable-verity --disable-verification flash vbmeta vbmeta.img
-            fastboot flash boot then drag the Magisk patched boot.img onto the command prompt
-            fastboot reboot</code>
-        </pre>
-        <button class="copy-btn" onclick="copyToClipboard('rootSteps')">Copy</button>
-        voila, you're rooted now. congrats!
-        <p>Happy rooting! 🚀📱</p>
-    </section>
+    Seems like you have unlocked the bootloader from the last step.
+    now get your Magisk patched boot.img and your vbmeta.img adn follow the commands below
+    <pre>
+        <code id="rootSteps">
+        fastboot --disable-verity --disable-verification flash vbmeta vbmeta.img
+        fastboot flash boot then drag the Magisk patched boot.img onto the command prompt
+        fastboot reboot
+        </code>
+    </pre>
+    voila, you're rooted now. congrats!
+    <p>Happy rooting! 🚀📱</p>
+</section>
 
     <footer>
         © 2024 Electric Moves. © 2024 JhayTech.
