--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Security Risks: An unlocked bootloader can potentially expose your device to sec
     <h2>Steps to Root</h2>
 
     Seems like you have unlocked the bootloader from the last step.
-    now get your Magisk patched boot.img and your vbmeta.img adn follow the commands below
+    now get your Magisk patched boot.img and your vbmeta.img and follow the commands below
     <pre>
         <code id="rootSteps">
         fastboot --disable-verity --disable-verification flash vbmeta vbmeta.img
